fix: resolve all SonarQube maintainability issues in payment components
- Add Builder pattern to PaymentDTO to replace 10-parameter constructor
- Fix field injection to constructor injection in PaymentServiceImpl
- Create dedicated exception classes (PaymentNotFoundException, PaymentProcessingException, WebhookProcessingException)
- Replace generic RuntimeException with specific exceptions
- Modernize Stream API usage (collect() to toList())
- Fix variable shadowing in PaymentServiceTest
- Maintain backward compatibility with deprecated constructor

Reduces maintainability issues and improves code quality while keeping all existing functionality intact.