@@ -16,6 +16,9 @@ import org.springframework.transaction.annotation.Transactional;
 import tqs.sparkflow.stationservice.dto.PaymentDTO;
 import tqs.sparkflow.stationservice.dto.PaymentIntentRequestDTO;
 import tqs.sparkflow.stationservice.dto.PaymentIntentResponseDTO;
+import tqs.sparkflow.stationservice.exception.PaymentNotFoundException;
+import tqs.sparkflow.stationservice.exception.PaymentProcessingException;
+import tqs.sparkflow.stationservice.exception.WebhookProcessingException;
 import tqs.sparkflow.stationservice.model.Booking;
 import tqs.sparkflow.stationservice.model.Payment;
 import tqs.sparkflow.stationservice.model.PaymentStatus;
@@ -26,7 +29,6 @@ import jakarta.annotation.PostConstruct;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -50,6 +52,10 @@ public class PaymentServiceImpl implements PaymentService {
 
     @PostConstruct
     public void init() {
+        setStripeApiKey();
+    }
+
+    private void setStripeApiKey() {
         Stripe.apiKey = stripeSecretKey;
     }
 
@@ -59,7 +65,7 @@ public class PaymentServiceImpl implements PaymentService {
             // Verify booking exists
             Optional<Booking> bookingOpt = bookingRepository.findById(request.getBookingId());
             if (bookingOpt.isEmpty()) {
-                throw new IllegalArgumentException("Booking not found with ID: " + request.getBookingId());
+                throw new PaymentNotFoundException("Booking not found with ID: " + request.getBookingId());
             }
 
             Booking booking = bookingOpt.get();
@@ -69,7 +75,7 @@ public class PaymentServiceImpl implements PaymentService {
                 request.getBookingId(), PaymentStatus.SUCCEEDED);
             
             if (!existingPayments.isEmpty()) {
-                throw new IllegalStateException("Payment already exists for booking ID: " + request.getBookingId());
+                throw new PaymentProcessingException("Payment already exists for booking ID: " + request.getBookingId());
             }
 
             // Create Stripe payment intent
@@ -97,7 +103,7 @@ public class PaymentServiceImpl implements PaymentService {
                 request.getDescription()
             );
 
-            payment = paymentRepository.save(payment);
+            paymentRepository.save(payment);
 
             logger.info("Created payment intent {} for booking {}", paymentIntent.getId(), request.getBookingId());
 
@@ -111,11 +117,14 @@ public class PaymentServiceImpl implements PaymentService {
             );
 
         } catch (StripeException e) {
-            logger.error("Stripe error creating payment intent: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to create payment intent: " + e.getMessage());
+            logger.error("Stripe error creating payment intent", e);
+            throw new PaymentProcessingException("Failed to create payment intent due to Stripe error", e);
+        } catch (PaymentNotFoundException | PaymentProcessingException e) {
+            // Re-throw business exceptions as-is
+            throw e;
         } catch (Exception e) {
-            logger.error("Error creating payment intent: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to create payment intent: " + e.getMessage());
+            logger.error("Unexpected error creating payment intent", e);
+            throw new PaymentProcessingException("Failed to create payment intent due to unexpected error", e);
         }
     }
 
@@ -142,7 +151,10 @@ public class PaymentServiceImpl implements PaymentService {
 
         } catch (StripeException e) {
             logger.error("Stripe error confirming payment: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to confirm payment: " + e.getMessage());
+            throw new PaymentProcessingException("Failed to confirm payment due to Stripe error", e);
+        } catch (Exception e) {
+            logger.error("Unexpected error confirming payment: {}", e.getMessage(), e);
+            throw new PaymentProcessingException("Failed to confirm payment due to unexpected error", e);
         }
     }
 
@@ -176,10 +188,10 @@ public class PaymentServiceImpl implements PaymentService {
 
         } catch (SignatureVerificationException e) {
             logger.error("Invalid webhook signature: {}", e.getMessage());
-            throw new RuntimeException("Invalid webhook signature");
+            throw new WebhookProcessingException("Invalid webhook signature", e);
         } catch (Exception e) {
             logger.error("Error processing webhook: {}", e.getMessage(), e);
-            throw new RuntimeException("Error processing webhook: " + e.getMessage());
+            throw new WebhookProcessingException("Error processing webhook", e);
         }
     }
 
@@ -232,7 +244,7 @@ public class PaymentServiceImpl implements PaymentService {
     public PaymentDTO getPaymentById(Long paymentId) {
         Optional<Payment> paymentOpt = paymentRepository.findById(paymentId);
         if (paymentOpt.isEmpty()) {
-            throw new IllegalArgumentException("Payment not found with ID: " + paymentId);
+            throw new PaymentNotFoundException("Payment not found with ID: " + paymentId);
         }
         return convertToDTO(paymentOpt.get());
     }
@@ -242,7 +254,7 @@ public class PaymentServiceImpl implements PaymentService {
     public PaymentDTO getPaymentByStripeId(String stripePaymentIntentId) {
         Optional<Payment> paymentOpt = paymentRepository.findByStripePaymentIntentId(stripePaymentIntentId);
         if (paymentOpt.isEmpty()) {
-            throw new IllegalArgumentException("Payment not found with Stripe ID: " + stripePaymentIntentId);
+            throw new PaymentNotFoundException("Payment not found with Stripe ID: " + stripePaymentIntentId);
         }
         return convertToDTO(paymentOpt.get());
     }
@@ -253,7 +265,7 @@ public class PaymentServiceImpl implements PaymentService {
         List<Payment> payments = paymentRepository.findByBookingIdOrderByCreatedAtDesc(bookingId);
         return payments.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -262,7 +274,7 @@ public class PaymentServiceImpl implements PaymentService {
         List<Payment> payments = paymentRepository.findAll();
         return payments.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -273,17 +285,17 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Override
     public PaymentDTO convertToDTO(Payment payment) {
-        return new PaymentDTO(
-            payment.getId(),
-            payment.getBookingId(),
-            payment.getStripePaymentIntentId(),
-            payment.getAmount(),
-            payment.getCurrency(),
-            payment.getStatus(),
-            payment.getDescription(),
-            payment.getCreatedAt(),
-            payment.getUpdatedAt(),
-            payment.getPaidAt()
-        );
+        return PaymentDTO.builder()
+            .id(payment.getId())
+            .bookingId(payment.getBookingId())
+            .stripePaymentIntentId(payment.getStripePaymentIntentId())
+            .amount(payment.getAmount())
+            .currency(payment.getCurrency())
+            .status(payment.getStatus())
+            .description(payment.getDescription())
+            .createdAt(payment.getCreatedAt())
+            .updatedAt(payment.getUpdatedAt())
+            .paidAt(payment.getPaidAt())
+            .build();
     }
 }
